[fix] relocating nodes to Extensions Pack

--- a/Meoseon/11st-shopping.html
+++ b/Meoseon/11st-shopping.html
@@ -117,7 +117,7 @@
 </script>
 <script type="text/javascript">
   RED.nodes.registerType("sk11st-shopping", {
-    category: "Samsung AutomationStudio",
+    category: 'SASM Ecommerce Extensions Pack',
     color: "#F3B567",
     defaults: {
       name: { value: "" },
