--- a/Meoseon/Meoseon-NaverBooks.html
+++ b/Meoseon/Meoseon-NaverBooks.html
@@ -80,7 +80,7 @@
   <script type="text/javascript">
     RED.nodes.registerType("naver-books", {
       color: "#04cf5c",
-      category: "Samsung AutomationStudio",
+      category: 'SASM Ecommerce Extensions Pack',
       defaults: {
         name: {value: "Naver Books"},
         returnType: {value: "json", required: false},
