[fix] relocating shopping node to Extensions Pack

--- a/Meoseon/Meoseon-Shopping.html
+++ b/Meoseon/Meoseon-Shopping.html
@@ -161,7 +161,7 @@
 <script type="text/javascript">
     RED.nodes.registerType("shopping", {
         color: "#04cf5c",
-        category: "Samsung AutomationStudio",
+        category: "SASM Ecommerce Extensions Pack",
         defaults: {
             apiType: { value: "naverShopping", required: true },
 
